--- a/src/components/Movie.module.css
+++ b/src/components/Movie.module.css
@@ -18,3 +18,12 @@
   margin: 0;
   font-size: 1rem;
 }
+
+.movie button{
+  background-color: tomato;
+  cursor: pointer;
+}
+
+.movie button:hover{
+  background-color: rgb(255, 38, 0);
+}
